--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 
 	<head>
 
-		<title>Nostalgia - Responsive Minimal Portfolio Template</title>
+		<title>云云云 - 主页</title>
 		<meta name="keywords" content="clean, creative, full screen, fullscreen, jquery, minimal, minimalistic, modern, personal, portfolio, responsive, retro, template, vintage, yellow" />
 		<meta name="description" content="Nostalgia is a HTML portfolio template - personal or corporate, based on full-screen slider and sliding pages. The template is maintained in a minimalist, contrasting style. Background images kept in retro tones contrast with modern minimalist content." />		
 		
@@ -30,8 +30,17 @@
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Aldrich"/> -->
 
 		<script type="text/javascript">
-			var config={"about.html":{"title":"About - Nostalgia - Responsive Minimal Portfolio Template","keywords":"","description":""},"services.html":{"title":"Services - Nostalgia - Responsive Minimal Portfolio Template","keywords":"","description":""},"portfolio.html":{"title":"Portfolio - Nostalgia - Responsive Minimal Portfolio Template","keywords":"","description":""},"blog.html":{"title":"Blog - Nostalgia - Responsive Minimal Portfolio Template","keywords":"","description":""},"contact.html":{"title":"Contact - Nostalgia - Responsive Minimal Portfolio Template","keywords":"","description":""},"post.html":{"title":"Post - Nostalgia - Responsive Minimal Portfolio Template","keywords":"","description":""}};
-			var configDefault={"title":"Nostalgia - Responsive Minimal Portfolio Template","keywords":"clean, creative, full screen, fullscreen, jquery, minimal, minimalistic, modern, personal, portfolio, responsive, retro, template, vintage, yellow","description":"Nostalgia is a HTML portfolio template - personal or corporate, based on full-screen slider and sliding pages. The template is maintained in a minimalist, contrasting style. Background images kept in retro tones contrast with modern minimalist content."};
+			var config={
+				"about.html":{"title":"云云云 - 简介","keywords":"","description":""},
+				"portfolio.html":{"title":"云云云 - 照片墙","keywords":"","description":""},
+				"blog.html":{"title":"云云云 - 博客","keywords":"","description":""},
+				"post.html":{"title":"云云云 - 帖子","keywords":"","description":""}
+			};
+			var configDefault={
+				"title":"云云云 - 主页",
+				"keywords":"宝宝 云云云",
+				"description":"Nostalgia is a HTML portfolio template - personal or corporate, based on full-screen slider and sliding pages. The template is maintained in a minimalist, contrasting style. Background images kept in retro tones contrast with modern minimalist content."
+			};
 			var mainURL='/Nostalgia/Template/html/';
 		</script>
 		
